# DABA

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
cmake/: FindNCCL.cmake
examples/: CMakeLists.txt  ceres_bal_dataset.cpp  mem_comm_bal_dataset.cu  mpi_admm_bal_dataset.cu  mpi_daba_bal_dataset.cu  mpi_dr_bal_dataset.cu
examples/admm/: CMakeLists.txt  admm_problem.cu  admm_problem.h
examples/ceres/: camera.h  math.h  reprojection.h  types.h
examples/douglas_rachford/: CMakeLists.txt  douglas_rachford_problem.cu  douglas_rachford_problem.h
sfm/: CMakeLists.txt  types.cpp  types.h
sfm/ba/: dataset.cu  dataset.h  distributed_problem-inl.h  distributed_problem.cu  distributed_problem.h  macro.h  types.h
sfm/ba/clustering/: clustering.cu  clustering.cuh  common_methods.cu  common_methods.cuh  merger.cu  merger.cuh
sfm/ba/functions/: ba.h  ba_async.cu  ba_async.cuh  ba_functions.h  ba_gpu.cu  ba_kernel.cuh
sfm/ba/utils/: utils.cpp  utils.h
sfm/graph/: graph.cuh  louvain.cu  louvain.cuh  types.hpp
sfm/graph/converters/: COOtoCSR.cu  COOtoCSR.cuh
sfm/graph/detail/: common_methods.cuh
sfm/graph/legacy/: graph.cu  graph.hpp
sfm/graph/utilities/: cuda_utils.cuh  error.hpp  graph_utils.cu  graph_utils.cuh  high_res_timer.hpp
sfm/math/: SO3.h
sfm/optimization/: LM.h  PCG.h  concepts.h
sfm/utils/: cuda_utils.h  iterators.h  robust_loss.h  timer.h  utils-inl.cuh  utils.cu  utils.cuh  utils.h
sfm/utils/internal/: atomic-inl.cuh  internal-inl.cuh  shared_memory-inl.cuh  svd3x3-inl.cuh
sfm/utils/internal/solver/chol/: chol-inl.h  chol.cu  chol.cuh
sfm/utils/internal/solver/lu/: Readme  description.txt  lu.cu  lu.cuh  operations.h
